[package]
name = "rustruut"
version = "0.0.3"
edition = "2021"
license-file = "LICENSE"
description = "Text-to-IPA converter and phonetic translator for Rust, powered by the Goruut phonemization engine"

[lib]
name = "rustruut"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.3.0"
sha2 = "0.10.6"
thiserror = "1.0.38"
platforms = "3.0.1"
sysinfo = "0.29.2"
dirs = "4.0.0"
indicatif = "0.18.0"
once_cell = "1.21.3"
